<resources>
    <string name="app_name">Final Project 2</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="itemBarang">
        <item>-- Pilih barang --</item>
        <!--        <item> Busana Pria - Formal</item>-->
        <!--        <item> Busana Pria - T-Shirts</item>-->
        <!--        <item> Busana Pria - Bottom Wear</item>-->
        <!--        <item> Busana Pria - Shoes</item>-->
        <!--        <item> Busana Wanita - Formal</item>-->
        <!--        <item> Busana Wanita - Dress</item>-->
        <!--        <item> Busana Wanita - Skirt</item>-->
        <!--        <item> Busana Wanita - Shoes</item>-->
        <!--        <item> Elektronik</item>-->
        <!--        <item> Buku</item>-->
        <!--        <item> Lainnya</item>-->
    </string-array>
    <string name="title_activity_home_page_user">Home</string>
    <string name="tab_text_1">Busana</string>
    <string name="tab_text_2">Elektronik</string>
    <string name="tab_text_3">Lainnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back_Button</string>
    <string name="kembali">Kembali</string>
    <string name="add_stock">Tambahkan Produk</string>
    <string name="image_add_stock">Image Add Stock</string>
    <string name="kategori">Kategori</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="masukkan_nama_barang">Masukkan Nama Barang</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="_20">20</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="_20_000">20.000</string>
    <string name="upload_gambar">Upload Gambar</string>
    <string name="image_stock">Image Stock</string>
    <string name="tambah_stok">Tambah Produk</string>
    <string name="image_add_staff">Image Add Staff</string>
    <string name="tambahkan_staff">Tambahkan Staf</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="doni_wahyudi">Doni Wahyudi</string>
    <string name="email">Email</string>
    <string name="doni_gmail_com">doni@gmail.com</string>
    <string name="password">Password</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="tambah_staff">Tambah Staf</string>

    <string name="image_login_admin">Image Login Admin</string>

    <string name="e_commerce">E-COMMERCE</string>


    <string name="image_login_user">Image Login User</string>

    <string name="image_register_user">Image Register User</string>
    <string name="register">Registrasi</string>
    <string name="back_to_sign_in">Sudah punya akun? Masuk</string>

    <string name="about_us">Tentang Kami</string>
    <string name="instagram">Instagram</string>
    <string name="stok_50">Stok: 50</string>
    <string name="rp50_000">Rp50.000</string>
    <string name="stok">Stok: </string>
    <string name="rp">Rp.</string>
    <string name="keluar">Keluar</string>
    <string name="log_out2">Log Out</string>
    <string name="welcome">Selamat Datang\n</string>
    <string name="logo_splash_screen">Logo Splash Screen</string>
    <string name="logo_toko">Logo Toko</string>
    <string name="user">USER</string>
    <string name="staff">STAF</string>
    <string name="admin">ADMIN</string>
    <string name="beli">Beli</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="masuk">Masuk</string>
    <string name="tampilkan_kata_sandi">Tampilkan Kata Sandi</string>
    <string name="masuk_admin">Masuk Admin</string>
    <string name="konfirmasi_admin">Konfirmasi Admin</string>
    <string name="selamat_datang_admin">Selamat Datang, Admin</string>
    <string name="tambah_produk">🛒 Tambah Produk</string>
    <string name="tambah_staf">🧑‍💼 Tambah Staf</string>
    <string name="masuk_staf">Masuk Staf</string>
    <string name="buat_akun_baru">Buat Akun Baru</string>
    <string name="masuk_pengguna">Masuk Pengguna</string>
    <string name="pakaian_pria_dan_perlengkapan_lain">Pakaian Pria dan Perlengkapan Lain</string>
    <string name="pakaian_wanita_dan_perlengkapan_lain">Pakaian Wanita dan Perlengkapan Lain</string>
    <string name="komputer">Komputer</string>
    <string name="handphone">Handphone</string>
    <string name="buku">Buku</string>
    <string name="barang_lainnya">Barang Lainnya</string>
    <string name="kaos">Kaos</string>
    <string name="pakaian_formal">Pakaian Formal</string>
    <string name="celana">Celana</string>
    <string name="sepatu">Sepatu</string>
    <string name="rok_wanita">Rok Wanita</string>
    <string name="gaun_wanita">Gaun Wanita</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="profile">Profile</string>
</resources>