<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Admin.AddStock">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarStaf"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:id="@+id/imgBack1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/hind_bold"
                android:paddingTop="5dp"
                android:text="@string/kembali"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/image_add_stock"
            android:src="@drawable/add_stok" />

        <TextView
            style="@style/judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/add_stock"
            android:textColor="@color/biru" />

        <TextView
            style="@style/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/kategori" />

        <Spinner
            android:id="@+id/kategoriBrg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/input_text"
            android:entries="@array/itemBarang" />

        <TextView
            style="@style/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/nama_barang" />

        <EditText
            android:id="@+id/namaBrg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="Nama Barang"
            android:background="@drawable/input_text"
            android:hint="@string/masukkan_nama_barang"
            android:inputType="text"
            android:paddingStart="14dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/stok_barang" />

        <EditText
            android:id="@+id/totalStok"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="Stok Barang"
            android:background="@drawable/input_text"
            android:hint="@string/_20"
            android:inputType="number"
            android:paddingStart="14dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/harga_barang" />

        <EditText
            android:id="@+id/hargaBarang"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:autofillHints="Harga Barang"
            android:background="@drawable/input_text"
            android:hint="@string/_20_000"
            android:inputType="text"
            android:paddingStart="14dp"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            style="@style/keterangan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/upload_gambar" />

        <ImageView
            android:id="@+id/imgbarang"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/input_text"
            android:contentDescription="@string/image_stock"
            android:src="@drawable/upload_image" />

        <Button
            android:id="@+id/addStock"
            style="@style/text"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_text"
            android:backgroundTint="@color/biru"
            android:text="@string/tambah_stok" />

    </LinearLayout>

</ScrollView>