<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Staff.LoginStaff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_toko" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/hind_regular"
        android:paddingTop="12dp"
        android:text="@string/e_commerce"
        android:textColor="@color/biru"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/masuk_staf"
        android:textColor="@color/biru"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/et_Username_staff"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_text"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingStart="14dp"
        android:autofillHints="emailAddress"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_Password_staff"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/input_text"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="14dp"
        android:autofillHints="password"
        tools:ignore="RtlSymmetry" />

    <CheckBox
        android:id="@+id/show_Pass_staff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:text="@string/tampilkan_kata_sandi" />

    <Button
        android:id="@+id/btnLogin_staff"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/input_text"
        android:backgroundTint="@color/navy"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/masuk"
        android:textSize="20sp" />

</LinearLayout>