<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AboutActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:contentDescription="@string/logo_toko"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/hind_regular"
        android:text="@string/e_commerce"
        android:textColor="@color/biru"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:fontFamily="@font/hind_semibold"
        android:text="@string/about_us"
        android:textColor="@color/biru"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ig1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram" />

        <ImageView
            android:id="@+id/ig2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram" />

        <ImageView
            android:id="@+id/ig3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="55dp"
            android:src="@drawable/instagram"
            android:contentDescription="@string/instagram" />
    </LinearLayout>


</LinearLayout>